# aio-services

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  docker-compose.yaml  mkdocs.yml  pyproject.toml  tox.ini
.github/: dependabot.yaml
.github/workflows/: ci_v1.yml  docs.yml  release.yml  tests.yml
aio_services/: __init__.py  __main__.py  broker.py  cli.py  consumer.py  errors.py  exceptions.py  logger.py  middleware.py  models.py  service.py  types.py  util.py  web.py
aio_services/backends/: pubsub.py  stub.py
aio_services/backends/kafka/: broker.py
aio_services/backends/nats/: broker.py  middlewares.py
aio_services/backends/rabbitmq/: __init__.py  broker.py  middlewares.py
aio_services/backends/redis/: __init__.py  broker.py  middlewares.py
aio_services/brokers/: kafka.py  nats.py  pubsub.py  rabbitmq.py  redis.py  stub.py
aio_services/brokers/kafka/: __init__.py  broker.py
aio_services/brokers/nats/: __init__.py  broker.py  middlewares.py  models.py
aio_services/brokers/rabbitmq/: __init__.py  broker.py  middlewares.py  models.py
aio_services/brokers/redis/: __init__.py  broker.py  middlewares.py
aio_services/encoders/: __init__.py  json.py  msgpack.py  orjson.py  pickle.py
aio_services/ext/: aiohttp.py  starlette.py
aio_services/middlewares/: __init__.py  current_message.py  debug.py  error.py  healthcheck.py  opentelemetry.py  prometheus.py  retries.py
aio_services/utils/: asyncio.py  functools.py  mixins.py
asvc/: __init__.py  __main__.py  broker.py  cli.py  consumer.py  exceptions.py  middleware.py  models.py  runner.py  service.py  settings.py  types.py  web.py
asvc/asyncapi/: generator.py  models.py  registry.py  utils.py
asvc/backends/: pubsub.py  stub.py
asvc/backends/kafka/: broker.py  settings.py
asvc/backends/nats/: broker.py  middlewares.py  settings.py
asvc/backends/pubsub/: broker.py  settings.py
asvc/backends/rabbitmq/: __init__.py  broker.py  middlewares.py  settings.py
asvc/backends/redis/: __init__.py  broker.py  middlewares.py  settings.py
asvc/encoders/: __init__.py  json.py
asvc/middlewares/: __init__.py  consumer_setup.py  debug.py  error.py  healthcheck.py  opentelemetry.py  prometheus.py  retries.py
asvc/utils/: __init__.py
docs/: async_api.md  backends.md  consumers.md  features.md  http.md  index.md  installation.md  middlewares.md  reference.md  service.md  usage.md
examples/: asyncapi.py  base.py  generic_consumer.py  nats.py  prometheus.py  rabbitmq.py  web.py
examples/bigger_application/: app.py  broker.py
examples/bigger_application/module_a/: consumers.py  messages.py  service.py
testing/: brokers.py
tests/: conftest.py  test_asyncapi.py  test_broker.py  test_brokers.py  test_encoders.py  test_service.py
