[tool.poetry]
name = "aio-services"
version = "0.1.0"
description = ""
authors = ["Radzim Kowalow <radzim_ko@wp.pl>"]

[tool.poetry.scripts]
asvc = "aio_services.cli:cli"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
uvloop = {version = "^0.16.0", optional = true}
orjson = {version = "^3.7.1", optional = true}
nats-py = {version = "^2.1.3", optional = true}
aioredis = {version = "^2.0.1", optional = true}
aiokafka = {version = "^0.7.2", optional = true}
aio-pika = {version = "^8.0.3", optional = true}
aiorun = {version = "^2022.4.1", optional = true}
click = {version = "^8.1.3", optional = true}
gcloud-aio-pubsub = {version = "^5.0.0", optional = true}
aiozmq = {version = "^0.9.0", optional = true}
prometheus-client = {version = "^0.14.1", optional = true}

[tool.poetry.extras]
all = ["orjson", "uvloop", "aiorun", "click", "prometheus-client", "nats-py", "aiokafka", "aio-pika", "gcloud-aio-pubsub", "aiozmq", "aioredis"]

# common
cli = ["aiorun", "click"]
fast = ["orjson", "uvloop"]

# observability
prometheus = ["prometheus-client"]

# brokers
nats = ["nats-py"]
redis = ["aioredis"]
kafka = ["aiokafka"]
rabbitmq = ["aio-pika"]
pubsub = ["gcloud-aio-pubsub"]
zmq = ["aiozmq"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mypy = "^0.961"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
tox = "^3.25.0"
pytest-asyncio = "^0.19.0"

[tool.pytest.ini_options]
addopts = "--cov=./aio_services"
testpaths = [
   "./tests"
]
asyncio_mode = "auto"

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
no_site_packages = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
