[tool.poetry]
name = "asvc"
version = "0.1.0"
description = "Event driven microservice framework for python"
readme = "README.md"
authors = ["Radzim Kowalow <radzim_ko@wp.pl>"]

[tool.poetry.scripts]
asvc = "asvc.cli:cli"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pydantic = "^1.9.1"
uvloop = {version = "^0.16.0", optional = true}

# cli
aiorun = {version = "^2022.4.1", optional = true}
click = {version = "^8.1.3", optional = true}

# encoders
orjson = {version = "^3.7.1", optional = true}
ormsgpack = {version = "^1.2.3", optional = true}

# misc
aiohttp = {version = "^3.8.1", optional = true}
prometheus-client = {version = "^0.14.1", optional = true}
opentelemetry-api = {version = "^1.13.0", optional = true}
opentelemetry-sdk = {version = "^1.13.0", optional = true}

# backends
nats-py = {version = "^2.1.3", optional = true}
aioredis = {version = "^2.0.1", optional = true}
aiokafka = {version = "^0.7.2", optional = true}
aio-pika = {version = "^8.0.3", optional = true}
gcloud-aio-pubsub = {version = "^5.0.0", optional = true}
async-timeout = "^4.0.2"

[tool.poetry.extras]
all = ["orjson", "aiorun", "click", "prometheus-client", "nats-py",
       "aiokafka", "aio-pika", "gcloud-aio-pubsub", "aiozmq", "aioredis", "ormsgpack",
       "opentelemetry-api", "opentelemetry-sdk"]

cli = ["aiorun", "click"]

# encoders
msgpack = ["ormsgpack"]
orjson = ["orjson"]

# observability
prometheus = ["prometheus-client"]
opentelemetry = ["opentelemetry-api", "opentelemetry-sdk"]

# backends
nats = ["nats-py"]
redis = ["aioredis"]
kafka = ["aiokafka"]
rabbitmq = ["aio-pika"]
pubsub = ["gcloud-aio-pubsub"]
zmq = ["aiozmq"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.20.2"
pytest-cov = "^4.0.0"
mypy = "^0.961"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
tox = "^3.25.0"
mkdocs = "^1.2.3"
mkdocs-material = "^8.2.1"
bandit = "^1.7.4"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
mkdocs-autorefs = "^0.4.1"
mkdocs-gen-files = "^0.4.0"
mkdocstrings-python = "^0.8.2"

[tool.pytest.ini_options]
addopts = "--cov=./asvc"
testpaths = [
   "./tests"
]
asyncio_mode = "auto"

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
no_site_packages = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
