[tool.poetry]
name = "asvc"
version = "0.1.1"
description = "Event driven microservice framework for python"
readme = "README.md"
authors = ["Radzim Kowalow <radzim_ko@wp.pl>"]

[tool.poetry.scripts]
asvc = "asvc.cli:cli"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pydantic = "^1.9.1"
async-timeout = "^4.0.2"

python-json-logger = {version = "^2.0.4", optional = true}
# cli
aiorun = {version = "^2022.4.1", optional = true}
click = {version = "^8.1.3", optional = true}

# encoders
orjson = {version = "^3.7.1", optional = true}
ormsgpack = {version = "^1.2.4", optional = true}

# prometheus
prometheus-client = {version = "^0.15.0", optional = true}

# backends
nats-py = {version = "^2.1.3", optional = true}
aioredis = {version = "^2.0.1", optional = true}
aiokafka = {version = "^0.8.0", optional = true}
aio-pika = {version = "^8.0.3", optional = true}
gcloud-aio-pubsub = {version = "^5.0.0", optional = true}



[tool.poetry.extras]
all = ["aiorun", "click", "orjson", "ormsgpack", "nats-py",
       "aiokafka", "aio-pika", "gcloud-aio-pubsub", "aioredis", "prometheus-client", "python-json-logger"]

cli = ["aiorun", "click"]

# encoders
orjson = ["orjson"]
ormsgpack = ["ormsgpack"]

# observability
prometheus = ["prometheus-client"]

# backends
nats = ["nats-py"]
redis = ["aioredis"]
kafka = ["aiokafka"]
rabbitmq = ["aio-pika"]
pubsub = ["gcloud-aio-pubsub"]
jsonlogger = ["python-json-logger"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.20.2"
pytest-cov = "^4.0.0"
mypy = "^0.961"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
tox = "^3.25.0"
mkdocs = "^1.2.3"
mkdocs-material = "^8.2.1"
bandit = "^1.7.4"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
mkdocs-autorefs = "^0.4.1"
mkdocs-gen-files = "^0.4.0"
mkdocstrings-python = "^0.8.2"
watchfiles = "^0.18.1"
python-semantic-release = "^7.33.2"

[tool.pytest.ini_options]
addopts = "--cov=./asvc"
testpaths = [
   "./tests"
]
asyncio_mode = "auto"

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
no_site_packages = true

[tool.isort]
profile = "black"

[tool.semantic_release]
version_variable = [
    'asvc/_version.py:__version__',
]
version_toml = 'pyproject.toml:tool.poetry.version'
version_pattern = [
    'docs/index.md:Version (\d+\.\d+\.\d+)',
    'README.md:Version: (\d+\.\d+\.\d+)'
]
upload_to_repository = false
major_on_zero = true
hvcs = "github"
commit_message = "Bump version: {version}"
tag_commit = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
